<?xml version="1.0" encoding="utf-8"?>

<resources>

  <!-- region Application -->

  <string name="app_name">Bookstore</string>

  <!-- endregion -->

  <!-- region Common -->

  <string name="common_yes">Yes</string>
  <string name="common_no">No</string>

  <!-- endregion -->

  <!-- region Login -->

  <string name="login_field_login">Login</string>
  <string name="login_field_password">Password</string>
  <string name="login_forgot_password">Forgot password?</string>
  <string name="login_sign_in">Sign in</string>
  <string name="login_sign_up">Sign up</string>
  <string name="login_error_invalid_credentials">Cannot login with given credentials.</string>

  <!-- endregion -->

  <!-- region Register -->

  <string name="register_email">Email</string>
  <string name="register_username">Username</string>
  <string name="register_password">Password</string>
  <string name="register_re_password">Repeat password</string>
  <string name="register_first_name">First name</string>
  <string name="register_last_name">Last name</string>
  <string name="register_proceed">Proceed</string>

  <!-- endregion -->

  <!-- region Forgot Password -->

  <string name="forgot_password_email">Email</string>
  <string name="forgot_password_reset">Reset password</string>

  <!-- endregion -->

  <!-- region Drawer -->

  <string name="drawer_item_home">Home</string>
  <string name="drawer_item_book_list">Books</string>
  <string name="drawer_item_cart">Cart</string>
  <string name="drawer_item_settings">Settings</string>
  <string name="drawer_item_about">About</string>
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>

  <!-- endregion -->

  <!-- region Home -->

  <string name="home_dialog_confirm_logout">Are you sure you want to sign out?</string>

  <!-- endregion -->

</resources>
